Add configuration to make project production ready