@@ -1,6 +1,7 @@
 package com.taskgenie.config;
 
 import com.taskgenie.filter.JwtFilter;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -21,6 +22,15 @@ import java.util.List;
 public class SecurityConfig {
 
   private final JwtFilter jwtFilter;
+
+  @Value("${spring.web.cors.allowed-origins:*}")
+  private String allowedOrigins;
+
+  @Value("${spring.web.cors.allowed-methods:GET,POST,PUT,DELETE,OPTIONS,PATCH}")
+  private String allowedMethods;
+
+  @Value("${spring.web.cors.allowed-headers:*}")
+  private String allowedHeaders;
 
   public SecurityConfig(JwtFilter jwtFilter) {
     this.jwtFilter = jwtFilter;
@@ -56,10 +66,28 @@ public class SecurityConfig {
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000"));
-    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-    configuration.setAllowedHeaders(List.of("*"));
-    configuration.setAllowCredentials(true);
+    
+    // Handle allowed origins - if "*" is set, allow all origins
+    // Note: When using "*", credentials must be disabled
+    boolean allowAllOrigins = "*".equals(allowedOrigins);
+    if (allowAllOrigins) {
+      configuration.addAllowedOriginPattern("*");
+      configuration.setAllowCredentials(false);
+    } else {
+      configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+      configuration.setAllowCredentials(true);
+    }
+    
+    // Set allowed methods from configuration
+    configuration.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
+    
+    // Set allowed headers - if "*" is set, allow all headers
+    if ("*".equals(allowedHeaders)) {
+      configuration.addAllowedHeader("*");
+    } else {
+      configuration.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
+    }
+    
     configuration.setExposedHeaders(List.of("Authorization"));
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", configuration);
